# manplan

./: Cargo.toml  README.md  sdk-rules.yaml
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
src/rules/: mod.rs
src/sdkman/: candidate.rs  mod.rs
