[package]
name = "manplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
maplit = "1.0.2"
clap = { version = "4.4.6", features = ["derive"] }
