[package]
version = "0.1.0"
authors = ["Gerard Krupa"]
edition = "2021"
description = "Tool for keeping sdkman candidates up-to-date"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/krupa-dev/manplan"

# See more keys and their definitions at https://dsoc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
maplit = "1.0.2"
clap = { version = "4.4.6", features = ["derive"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
